EditAgenda UI Update: Modified _Event view to increase understandability. --------------------------------------